--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
   <title>Camarão .Com Cérebro</title>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="semantic/semantic.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="./src/css/semantic/semantic.min.css">
+  <link rel="stylesheet" href="./src/css/style.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
           <a href='#'>INÍCIO</a>
         </li>
         <li>
-          <a href='#'>QUEM SOMOS</a>
+          <a href='#quemsomos'>QUEM SOMOS</a>
         </li>
         <li>
           <a href='#'>PORTIFOLIO</a>
@@ -51,7 +51,7 @@
     <div id="relogio"></div>
   </div>
   <div class="logo-topo">
-    <img src="images/camaraologo.svg" alt="">
+    <img src="src/img/camaraologo.svg" alt="">
   </div>
   <nav>
     <ul>
@@ -81,12 +81,12 @@
     </div>
 
     <div class="hero-end">
-      <img src="images/paint.jpg" alt="">
+      <img src="src/img/paint.jpg" alt="">
     </div>
 
   </div>
 
-  <div class="section2">
+  <div id="quemsomos" class="section2">
     <div class="sobre-content">
       <div class="texto-sobre">
         <h1>Quem Somos</h1>
@@ -95,12 +95,12 @@
           dolorem eum, inventore, laudantium maiores provident quasi sit, sunt vel veniam veritatis.</p>
       </div>
       <div class="logos-sobre">
-        <img src="images/carnaval.svg" alt="">
-        <img src="images/marmitacultural.svg" alt="">
-        <img src="images/xadrez.svg" alt="">
-        <img src="images/biblioteca.svg" alt="">
-        <img src="images/noelpunk.svg" alt="">
-        <img src="images/insanojoao.svg" alt="">
+        <img src="src/img/carnaval.svg" alt="">
+        <img src="src/img/marmitacultural.svg" alt="">
+        <img src="src/img/xadrez.svg" alt="">
+        <img src="src/img/biblioteca.svg" alt="">
+        <img src="src/img/noelpunk.svg" alt="">
+        <img src="src/img/insanojoao.svg" alt="">
       </div>
     </div>
 
@@ -109,7 +109,7 @@
     </div>
 
     <div class="sobre-end">
-      <img src="images/musica.jpg" alt="">
+      <img src="src/img/musica.jpg" alt="">
     </div>
 
   </div>
@@ -119,18 +119,18 @@
       <h1>Portifolio</h1>
     </div>
     <div class="portifolio">
-      <img src="images/slide1.jpg" alt="">
-      <img src="images/slide2.jpg" alt="">
-      <img src="images/slide3.jpg" alt="">
-      <img src="images/slide4.jpg" alt="">
-      <img src="images/slide5.jpg" alt="">
-      <img src="images/slide6.jpg" alt="">
-      <img src="images/slide7.jpg" alt="">
-      <img src="images/slide8.jpg" alt="">
-      <img src="images/slide9.jpg" alt="">
-      <img src="images/slide10.jpg" alt="">
-      <img src="images/slide11.jpg" alt="">
-      <img src="images/slide12.jpg" alt="">
+      <img src="src/img/slide1.jpg" alt="">
+      <img src="src/img/slide2.jpg" alt="">
+      <img src="src/img/slide3.jpg" alt="">
+      <img src="src/img/slide4.jpg" alt="">
+      <img src="src/img/slide5.jpg" alt="">
+      <img src="src/img/slide6.jpg" alt="">
+      <img src="src/img/slide7.jpg" alt="">
+      <img src="src/img/slide8.jpg" alt="">
+      <img src="src/img/slide9.jpg" alt="">
+      <img src="src/img/slide10.jpg" alt="">
+      <img src="src/img/slide11.jpg" alt="">
+      <img src="src/img/slide12.jpg" alt="">
     </div>
   </div>
 
@@ -140,7 +140,7 @@
 <footer>
   <div class="footer-content">
     <div class="social">
-      <img src="images/camaraologo.svg" alt="">
+      <img src="src/img/camaraologo.svg" alt="">
       <h2>Siga o Camarão</h2>
       <i class="huge icons">
         <i class="facebook f link icon"></i>
